fixed top and bottom bar links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- viewport meta tag for proper mobile scaling -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- viewport meta tag for proper mobile scaling -->
   <link rel="stylesheet" href="styles.css">
 
   <title>
@@ -16,16 +17,20 @@
   <!-- TOP BAR -->
 
   <div class="topnav-1">
+
     <a class="active-1" href="page-depth-01/Tutorials.html">
-        <small>Resources<br>Tutorials</small>
+      <small>Resources<br>Tutorials</small>
     </a>
     <a class="active-1" href="page-depth-01/References.html">
-        <small>References<br>(updates)</small>
+      <small>References<br>(updates)</small>
     </a>
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-        <small>Coding<br>Blogs</small>
+      <small>Coding<br>Blogs</small>
     </a>
-</div>
+    <a class="active-1" href="page-depth-01/CSE-Files.html">
+      <small>CSE<br>Files</small>
+    </a>
+  </div>
 
   <!-- GO BOTTOM RELATIVE LINK -->
 
@@ -53,14 +58,15 @@
         <div class="top-bar-2">
           <div class="iframe-container-2">
             <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
-          </div></div>
-      
-       
+          </div>
+        </div>
+
+
         <div class="overlay-2"></div>
-          <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
+        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
       </th>
     </tr>
-  </table> 
+  </table>
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
@@ -108,19 +114,20 @@
       <td>
         <div class="container-4">
           <div class="iframe-wrapper-4">
-            <p align=center style="color:rgba(60, 60, 82, 0.733);">This is what you should expect to see<br>when you open the root Drive link:</p>
+            <p align=center style="color:rgba(60, 60, 82, 0.733);">This is what you should expect to see<br>when you
+              open the root Drive link:</p>
             <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
-              href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-              target="_blank"><small><b>(
-                  Shortcut to oUITS Resources )</b></small></a></p>
+                href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+                target="_blank"><small><b>(
+                    Shortcut to oUITS Resources )</b></small></a></p>
             <!-- <div class="iframe-controls-4">
               <button class="button-4" onclick="zoomIn()">Zoom In</button>
               <button class="button-4" onclick="zoomOut()">Zoom Out</button>
               <button class="button-4" onclick="resetZoom()">Reset</button>
             </div> -->
             <iframe class="iframe-4"
-              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-              allowfullscreen sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
+              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" allowfullscreen
+              sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
             </iframe>
           </div>
         </div>
@@ -128,7 +135,7 @@
     </tr>
   </table>
 
-  
+
   <br>
   <br>
   <br>
@@ -179,9 +186,10 @@
 
   <p align=center></p>
 
-  <p align=center><a href=abstraction/wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
+  <p align=center><a href=abstraction/wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in
+      progress</a></p>
 
-  
+
   <!-- GO TOP RELATIVE LINK -->
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
