--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -9,6 +9,7 @@
             border: 3px solid rgba(31, 106, 168, 0.452);
         }
     </style>
+    <link rel="stylesheet" href="../styles.css">
     <title>
         References for oUITS
     </title>
@@ -18,60 +19,65 @@
 
     <!-- TOP BAR -->
 
-<div class="topnav-1">
-    <a class="active-1" href="page-depth-01/Tutorials.html">
-        <small>Resources<br>Tutorials</small>
-    </a>
-    <a class="active-1" href="page-depth-01/References.html">
-        <small>References<br>(updates)</small>
-    </a>
-    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-        <small>Coding<br>Blogs</small>
-    </a>
-</div>
+    <div class="topnav-1">
+
+        <a class="active-1" href="Tutorials.html">
+            <small>Resources<br>Tutorials</small>
+        </a>
+        <a class="active-1" href="References.html">
+            <small>References<br>(updates)</small>
+        </a>
+        <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+            <small>Coding<br>Blogs</small>
+        </a>
+        <a class="active-1" href="CSE-Files.html">
+            <small>CSE<br>Files</small>
+        </a>
+    </div>
 
 
-  <!-- BOTTOM BAR "navbar" -->
+    <!-- BOTTOM BAR "navbar" -->
 
-  <div style="padding-left:16px">
-</div>
-<div class="navbar-5">
-  <font size="24"></font>
-  <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
-  </font>
+    <div style="padding-left:16px">
+    </div>
+    <div class="navbar-5">
+        <font size="24"></font>
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+        </font>
 
-</div>
-<!-- ----------------------------------------------------------------------- -->
+    </div>
+    <!-- ----------------------------------------------------------------------- -->
 
     <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
 
-<table align="center">
-<tr>
-  
-<td align="center">
-    <font size="5">Similar Projects ! !</font>
+    <table align="center">
+        <tr>
+
+            <td align="center">
+                <font size="5">Similar Projects ! !</font>
+                <br>
+                <font size="3"><small style="color:rgba(60, 60, 82, 0.733);">(for references)</small></font>
+            </td>
+
+        </tr>
+        <tr>
+            <td>
+                <font size="3">
+                    <ul>
+                        <li style="color:rgba(60, 60, 82, 0.733);"><a href=" http://akibreza.github.io/uitsBOT"
+                                target="_blank" style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza
+                                (0432220005101061)</a></li>
+
+                    </ul>
+
+                </font>
+            </td>
+
+        </tr>
+    </table>
     <br>
-    <font size="3"><small style="color:rgba(60, 60, 82, 0.733);">(for references)</small></font>
-  </td>
-
-</tr>
-<tr>
-  <td>
-    <font size="3">
-      <ul>
-        <li style="color:rgba(60, 60, 82, 0.733);"><a href=" http://akibreza.github.io/uitsBOT" target="_blank"
-            style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza (0432220005101061)</a></li>
-
-      </ul>
-
-    </font>
-  </td>
-
-</tr>
-</table>
-<br>
-<br>
-<br>
+    <br>
+    <br>
     <p align="center">(Other Universities doing skibidi)</p>
 
     <table align="center" style="width:90%">
@@ -105,15 +111,15 @@
             </td>
             <td>
                 <ul>
-                    
+
             <td>
-<li> <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> <br>+ <a
-                            href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">PlayStore
-                            App</a>
-                    </li>
+                <li> <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> <br>+ <a
+                        href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">PlayStore
+                        App</a>
+                </li>
 
             </td>
-           
+
         </tr>
         <tr align="center">
             <td>
@@ -138,7 +144,8 @@
                     <li> <a href="https://www.scopus.com/home.uri">Scopus</a></li>
                     <br>
                     <li> <a href="https://www.turnitin.com/">turnitin</a></li>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         </td>
         </tr>
@@ -152,7 +159,8 @@
                     <br>
                     <li> <a href="https://library.northsouth.edu/">Library</a></li>
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         <tr align="center">
             <td>
@@ -164,7 +172,8 @@
                     <br>
                     <li> <a href="https://www.bracu.ac.bd/students">Other Facilities for the Students</a></li>
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         <tr align="center">
             <td>
@@ -183,7 +192,8 @@
                         </ul>
                     </li>
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         <tr align="center">
             <td>
@@ -197,7 +207,8 @@
                     <br>
                     <li> <a href="https://iub.ac.bd/directory">Directory</a></li>
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         <tr align="center">
             <td>
@@ -209,7 +220,8 @@
                     <br>
                     <li> <a href="https://www.aiub.edu/faculties/fst/ug-course-catalog">Course Catalogue</a></li>
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         <tr align="center">
             <td>
@@ -221,7 +233,8 @@
                     <br>
 
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
         <tr align="center">
             <td>
@@ -233,7 +246,8 @@
                     <br>
 
                 </ul>
-            </td> <td></td>
+            </td>
+            <td></td>
         </tr>
     </table>
 
