--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -16,32 +16,36 @@
 </head>
 
 <body>
-<!-- TOP BAR -->
+    <!-- TOP BAR -->
 
-<div class="topnav-1">
-    <a class="active-1" href="page-depth-01/Tutorials.html">
-        <small>Resources<br>Tutorials</small>
-    </a>
-    <a class="active-1" href="page-depth-01/References.html">
-        <small>References<br>(updates)</small>
-    </a>
-    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-        <small>Coding<br>Blogs</small>
-    </a>
-</div>
+    <div class="topnav-1">
+
+        <a class="active-1" href="Tutorials.html">
+            <small>Resources<br>Tutorials</small>
+        </a>
+        <a class="active-1" href="References.html">
+            <small>References<br>(updates)</small>
+        </a>
+        <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+            <small>Coding<br>Blogs</small>
+        </a>
+        <a class="active-1" href="CSE-Files.html">
+            <small>CSE<br>Files</small>
+        </a>
+    </div>
 
 
-  <!-- BOTTOM BAR "navbar" -->
+    <!-- BOTTOM BAR "navbar" -->
 
-  <div style="padding-left:16px">
-</div>
-<div class="navbar-5">
-  <font size="24"></font>
-  <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
-  </font>
+    <div style="padding-left:16px">
+    </div>
+    <div class="navbar-5">
+        <font size="24"></font>
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+        </font>
 
-</div>
-<!-- ----------------------------------------------------------------------- -->
+    </div>
+    <!-- ----------------------------------------------------------------------- -->
 
 
 
