added home button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- viewport meta tag for proper mobile scaling -->
   <link rel="stylesheet" href="styles.css">
-
+  <style>
+    table,
+    th,
+    td {
+      border: 2px solid rgba(31, 106, 168, 0);
+      border-radius: 10px;
+    }
+  </style>
   <title>
     oUITS Resources
   </title>
@@ -22,7 +29,7 @@
       <small>Resources<br>Tutorials</small>
     </a>
     <a class="active-1" href="page-depth-01/References.html">
-      <small>References<br>(updates)</small>
+      <small>References</small>
     </a>
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
       <small>Coding<br>Blogs</small>
