--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -2,14 +2,16 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <style>
         table,
         th,
         td {
-            border: 3px solid rgba(31, 106, 168, 0.452);
+            border: 2px solid rgba(0, 0, 0, 0.145);
+            border-radius: 10px;
+            max-width: 800px;
         }
     </style>
-    <link rel="stylesheet" href="../styles.css">
     <title>
         References for oUITS
     </title>
@@ -47,9 +49,11 @@
 
     </div>
     <!-- ----------------------------------------------------------------------- -->
-
+    <!-- <div align=center>
+        <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
+    </div> -->
     <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
-
+    <br>
     <table align="center">
         <tr>
 
@@ -255,6 +259,13 @@
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
 
         <br><br><br><br><br>
+        <!-- HOME BUTTON -->
+
+    <a href="../index.html" class="home-button">
+        <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+        </svg>
+    </a>
 </body>
 
 </html>
