--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -48,13 +48,15 @@
     <!-- ----------------------------------------------------------------------- -->
 
 
-
+    <!-- <div align=center>
+        <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
+    </div> -->
     <div align=center>
         <p align="center" style="width: 60%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
                     batch</b><br><br>Take Note that Files maybe
                 outdated or
                 not organized to the latest course list. In that case, please email me
-                at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in
+                at <b>b1tranger.01@gmail.com</b> and let me know of the specific shortcomings of this page. <br><br>Thanks in
                 advance!!
             </small></p>
 
@@ -138,6 +140,14 @@
         <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
     </div>
     <br><br><br><br><br>
+
+    <!-- HOME BUTTON -->
+
+    <a href="#" class="home-button">
+        <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+        </svg>
+    </a>
 </body>
 
 </html>
