--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles.css">
     <style>
-        body {
+        /* body {
             margin: 0;
             padding: 20px;
             font-family: system-ui, -apple-system, sans-serif;
-        }
+        } */
 
         .container-5 {
             background-color: #000000c5;
@@ -16,6 +17,7 @@
             margin: 20px auto;
             width: min(90%, 800px);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
         }
 
         .highlights {
@@ -137,5 +139,13 @@
     <div class="back-link">
         <a href="../CSE-Files.html">Go back to CSE-Files</a>
     </div><br><br><br><br><br>
+    
+    <!-- HOME BUTTON -->
+
+    <a href="../../index.html" class="home-button">
+        <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+        </svg>
+    </a>
 </body>
 </html>
