--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../styles.css">
   <style>
-    body {
+    /* body {
         margin: 0;
         padding: 20px;
         font-family: system-ui, -apple-system, sans-serif;
-    }
+    } */
 
     .container-5 {
         background-color: #000000c5;
@@ -138,7 +139,14 @@
 
   <div align=center>
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
-  </div>
+  </div><br><br><br><br><br>
+  <!-- HOME BUTTON -->
+
+  <a href="../../index.html" class="home-button">
+    <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+    </svg>
+</a>
 </body>
 
 </html>
