added back button

--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -206,15 +206,20 @@
             </div>
         </section>
 
-        <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a>
+        <!-- <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a> -->
     </div>
     <br><br><br><br><br>
     <!-- HOME BUTTON -->
 
-    <a href="#" class="home-button">
+    <a href="../index.html" class="home-button">
         <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
         </svg>
     </a>
+ <!-- BACK BUTTON -->
+
+ <a href="javascript:history.back()" class="back-icon">&#8592;</a>
+
+
 </body>
 </html>
