--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <small>Resources<br>Tutorials</small>
     </a>
     <a class="active-1" href="page-depth-01/References.html">
-      <small>References</small>
+      <small>References<br>(updates)</small>
     </a>
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
       <small>Coding<br>Blogs</small>
