--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -256,7 +256,7 @@
     </table>
 
 
-    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
+    <!-- <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../index.html">Go back to index</a> -->
 
         <br><br><br><br><br>
         <!-- HOME BUTTON -->
@@ -266,6 +266,12 @@
             <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
         </svg>
     </a>
+    
+ <!-- BACK BUTTON -->
+
+ <a href="javascript:history.back()" class="back-icon">&#8592;</a>
+
+
 </body>
 
 </html>
