fixed top bar for semester folders

--- a/page-depth-01/page-depth-02/S02.html
+++ b/page-depth-01/page-depth-02/S02.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-  
- <!-- TOP BAR -->
+
+  <!-- TOP BAR -->
 
  <div class="topnav-1">
 
-  <a class="active-1" href="Tutorials.html">
-      <small>Resources<br>Tutorials</small>
-  </a>
-  <a class="active-1" href="References.html">
-      <small>References<br>(updates)</small>
-  </a>
-  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-      <small>Coding<br>Blogs</small>
-  </a>
-  <a class="active-1" href="CSE-Files.html">
-      <small>CSE<br>Files</small>
-  </a>
+    <a class="active-1" href="../Tutorials.html">
+        <small>Resources<br>Tutorials</small>
+    </a>
+    <a class="active-1" href="../References.html">
+        <small>References<br>(updates)</small>
+    </a>
+    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+        <small>Coding<br>Blogs</small>
+    </a>
+    <a class="active-1" href="../CSE-Files.html">
+        <small>CSE<br>Files</small>
+    </a>
 </div>
 
 <!-- BOTTOM BAR "navbar" -->
