--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -11,13 +11,14 @@
             border-radius: 10px;
             max-width: 800px;
         }
+       
     </style>
     <title>
         References for oUITS
     </title>
 </head>
 
-<body>
+<body style="background: linear-gradient(135deg, var(--primary-bg) 0%, var(--secondary-bg) 100%);">
 
     <!-- TOP BAR -->
 
@@ -266,7 +267,7 @@
             <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
         </svg>
     </a>
-    
+
  <!-- BACK BUTTON -->
 
  <a href="javascript:history.back()" class="back-icon">&#8592;</a>
