--- a/abstraction/wip.html
+++ b/abstraction/wip.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
     <style>
    table, th, td {
   border: 2px solid rgba(31, 106, 168, 0.452);
@@ -90,10 +91,19 @@
 
 <hr><!----------------------------------------------------------------- -->
 
+<!-- BOTTOM BAR "navbar" -->
+
+<div style="padding-left:16px">
+</div>
+<div class="navbar-5">
+    <font size="24"></font>
+    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+    </font>
+
+</div>
 
 
-
-
+<hr><!----------------------------------------------------------------- -->
 <div class="navbar">
   <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
