--- a/page-depth-01/page-depth-02/S05.html
+++ b/page-depth-01/page-depth-02/S05.html
@@ -4,66 +4,90 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles.css">
-    <title>
-        CSE-Files
-    </title>
+  <title>
+    CSE-Files
+  </title>
 </head>
 
 <body>
 
   <!-- TOP BAR -->
 
-<div class="topnav-1">
-  <a class="active-1" href="page-depth-01/Tutorials.html">
-      <small>Resources<br>Tutorials</small>
-  </a>
-  <a class="active-1" href="page-depth-01/References.html">
-      <small>References<br>(updates)</small>
-  </a>
-  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-      <small>Coding<br>Blogs</small>
-  </a>
+  <div class="topnav-1">
+
+    <a class="active-1" href="../Tutorials.html">
+        <small>Resources<br>Tutorials</small>
+    </a>
+    <a class="active-1" href="../References.html">
+        <small>References<br>(updates)</small>
+    </a>
+    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+        <small>Coding<br>Blogs</small>
+    </a>
+    <a class="active-1" href="../CSE-Files.html">
+        <small>CSE<br>Files</small>
+    </a>
 </div>
 
 
-<!-- BOTTOM BAR "navbar" -->
+  <!-- BOTTOM BAR "navbar" -->
 
-<div style="padding-left:16px">
-</div>
-<div class="navbar-5">
-<font size="24"></font>
-<p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
-</font>
+  <div style="padding-left:16px">
+  </div>
+  <div class="navbar-5">
+    <font size="24"></font>
+    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+    </font>
 
-</div>
-<!-- ----------------------------------------------------------------------- -->
+  </div>
+  <!-- ----------------------------------------------------------------------- -->
 
   <br><br><br>
-  <div  class="container-5" align=center>
+  <div class="container-5" align=center>
     <table class="resources-table-5" align=center style="width:90%;">
-        <tr>
-            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">5th Semester FIles</p>
-        </tr>
-        <tr>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1aJyvQRsfcEg917FK0nRsgBmB6fMgEWGj?usp=drive_link">S05 Books</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1aWbKDQZMjZuIMX-7zudQiSweEEl1uQQO?usp=drive_link">S05 Outlines</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-               <a href="https://drive.google.com/drive/folders/1fWVtEZDkhNz5-aFxeH06LW5am7GL_Hx1?usp=drive_link">S05 Questions</a>
-            </td>
-        </tr>
+      <tr>
+        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">5th Semester FIles</p>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1aJyvQRsfcEg917FK0nRsgBmB6fMgEWGj?usp=drive_link">S05
+            Books</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1aWbKDQZMjZuIMX-7zudQiSweEEl1uQQO?usp=drive_link">S05
+            Outlines</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1fWVtEZDkhNz5-aFxeH06LW5am7GL_Hx1?usp=drive_link">S05
+            Questions</a>
+        </td>
+      </tr>
     </table>
-</div>
+  </div>
 
-  <div align=center>
-    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div><br><br><br><br><br>
+  <!-- <div align=center>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+  </div> -->
+  
+  <br><br><br><br><br>
+
+  <!-- HOME BUTTON -->
+
+  <a href="../../index.html" class="home-button">
+    <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+      <path
+        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+    </svg>
+  </a>
+
+  <!-- BACK BUTTON -->
+
+  <a href="javascript:history.back()" class="back-icon">&#8592;</a>
+
 </body>
 
 </html>
