--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       border: 2px solid rgba(31, 106, 168, 0);
       border-radius: 10px;
     }
-   
   </style>
   <title>
     oUITS Resources
@@ -46,35 +45,6 @@
 
   <!-- <div class="scroll-text">This is scrolling text.</div> -->
 
-  <!-- BLOGGER IFRAME -->
-
-
-  <table border="10" align=center style="width:90%; max-width: 860px;">
-    <tr>
-      <th>
-
-        <!-- "topnav3" -->
-
-        <div class="topnav-3">
-          <h2>
-            <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
-          </h2>
-        </div>
-
-        <!-- "top-bar2" -->
-
-        <div class="top-bar-2">
-          <div class="iframe-container-2">
-            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
-          </div>
-        </div>
-
-
-        <div class="overlay-2"></div>
-        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
-      </th>
-    </tr>
-  </table>
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
@@ -113,6 +83,37 @@
     </table>
   </div>
 
+  <!-- BLOGGER IFRAME -->
+
+
+  <table border="10" align=center style="width:90%; max-width: 860px;">
+    <tr>
+      <th>
+
+        <!-- "topnav3" -->
+
+        <div class="topnav-3">
+          <h2>
+            <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
+          </h2>
+        </div>
+
+        <!-- "top-bar2" -->
+
+        <div class="top-bar-2">
+          <div class="iframe-container-2">
+            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+          </div>
+        </div>
+
+
+        <div class="overlay-2"></div>
+        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
+      </th>
+    </tr>
+  </table>
+
+
   <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
 
   <!-- <script src="myscripts.js"></script> -->
@@ -123,7 +124,7 @@
         <div class="container-4">
           <div class="iframe-wrapper-4">
             <p align=center style="color:rgba(60, 60, 82, 0.733);">This is what you should expect to see<br>when you
-              open the root Drive link:</p>
+              open the main Drive link:</p>
             <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
                 href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
                 target="_blank"><small><b>(
