--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
           <div class="iframe-wrapper-4">
             <p align=center style="color:rgba(60, 60, 82, 0.733);">This is what you should expect to see<br>when you
               open the main Drive link:</p>
-            <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
+            <p align=center>→ <a style="color:rgba(60, 60, 82, 0.733);"
                 href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
                 target="_blank"><small><b>(
-                    Shortcut to oUITS Resources )</b></small></a></p>
+                    Shortcut to oUITS Resources )</b></small></a> ←</p>
             <!-- <div class="iframe-controls-4">
               <button class="button-4" onclick="zoomIn()">Zoom In</button>
               <button class="button-4" onclick="zoomOut()">Zoom Out</button>
