--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
       <td>
         <div class="container-4">
           <div class="iframe-wrapper-4">
-            <p align=center style="color:rgba(60, 60, 82, 0.733);">This is what you should expect to see<br>when you
-              open the main Drive link:</p>
+            <p align=center style="color:rgba(60, 60, 82, 0.733);"></p>
             <p align=center>→ <a style="color:rgba(60, 60, 82, 0.733);"
                 href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
                 target="_blank"><small><b>(
