worked on blog window

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -12,6 +12,7 @@
             /* max-width: 600px; */
             text-align: center;
         }
+        
     </style>
 </head>
 
@@ -56,7 +57,8 @@
                     batch</b><br><br>Take Note that Files maybe
                 outdated or
                 not organized to the latest course list. In that case, please email me
-                at <b>b1tranger.01@gmail.com</b> and let me know of the specific shortcomings of this page. <br><br>Thanks in
+                at <b>b1tranger.01@gmail.com</b> and let me know of the specific shortcomings of this page.
+                <br><br>Thanks in
                 advance!!
             </small></p>
 
@@ -75,7 +77,6 @@
                     <a href="page-depth-02/S01.html">
                         1st Semester
                     </a>
-                    <!-- Replaced the table layout with CSS Grid Used grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) to create a responsive grid that automatically adjusts based on screen size Added proper spacing and margins between elements Improved the container sizing using the min() function Removed inline styles and deprecated HTML attributes (like align) Added proper hover states and transitions for better interactivity Made the back link more consistent with the overall design -->
                 </td>
                 <td>
                     <a href="page-depth-02/S02.html">
@@ -88,7 +89,6 @@
                     <a href="page-depth-02/S03.html">
                         3rd Semester
                     </a>
-                    <!-- Replaced the table layout with a CSS Grid structure Removed unnecessary table rows and cells Used a single-column grid since all items should stack vertically Simplified the CSS structure and removed redundant styles Added proper spacing and margins Removed inline styles and deprecated HTML attributes Ensured consistent width and centering of elements Removed unnecessary line breaks at the top of the body The page will now: Display consistently on all devices Match the styling of your other pages Have proper spacing between elements Be more maintainable due to simplified structure -->
 
                 <td>
                     <a href="page-depth-02/S04.html">
@@ -136,6 +136,41 @@
                         Link to the Google Drive instead? )</b></small></a></p>
         <br>
     </div>
+
+
+    <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
+
+    <!-- <script src="myscripts.js"></script> -->
+
+    <div>
+        <table border="0" align="center" style="width:75%;">
+            <tr>
+                <td>
+                    <div class="container-4">
+                        <div class="iframe-wrapper-4" style="padding:30px;">
+                            <p align=center>→ <a style="color:rgba(60, 60, 82, 0.733);"
+                                    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+                                    target="_blank"><small><b>(
+                                            Shortcut to oUITS Resources )</b></small></a> ←</p>
+                            <!-- <div class="iframe-controls-4">
+              <button class="button-4" onclick="zoomIn()">Zoom In</button>
+              <button class="button-4" onclick="zoomOut()">Zoom Out</button>
+              <button class="button-4" onclick="resetZoom()">Reset</button>
+            </div> -->
+                            <iframe class="iframe-4"
+                                src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+                                allowfullscreen
+                                sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
+                            </iframe>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+
+
     <!-- <div align=center>
         <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
     </div> -->
@@ -145,7 +180,8 @@
 
     <a href="../index.html" class="home-button">
         <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+            <path
+                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
         </svg>
     </a>
 
