--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
-  <div class="container-5">
+  <div class="container-5" style="width:76%;">
     <table class="resources-table-5" align="center" style="width:90%;">
       <tr>
         <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Curated Resources</p>
@@ -110,36 +110,6 @@
         <div class="overlay-2"></div>
         <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
       </th>
-    </tr>
-  </table>
-
-
-  <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
-
-  <!-- <script src="myscripts.js"></script> -->
-
-  <table border="10" align="center" style="width:100%;">
-    <tr>
-      <td>
-        <div class="container-4">
-          <div class="iframe-wrapper-4">
-            <p align=center style="color:rgba(60, 60, 82, 0.733);"></p>
-            <p align=center>→ <a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-                target="_blank"><small><b>(
-                    Shortcut to oUITS Resources )</b></small></a> ←</p>
-            <!-- <div class="iframe-controls-4">
-              <button class="button-4" onclick="zoomIn()">Zoom In</button>
-              <button class="button-4" onclick="zoomOut()">Zoom Out</button>
-              <button class="button-4" onclick="resetZoom()">Reset</button>
-            </div> -->
-            <iframe class="iframe-4"
-              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" allowfullscreen
-              sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
-            </iframe>
-          </div>
-        </div>
-      </td>
     </tr>
   </table>
 
