Top Bar: CSE-Files > UITS G-Drive

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -30,9 +30,9 @@
         <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
             <small>Coding<br>Blogs</small>
         </a>
-        <a class="active-1" href="CSE-Files.html">
-            <small>CSE<br>Files</small>
-        </a>
+        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+            <small>UITS<br>G-Drive</small>
+          </a>
     </div>
 
 
@@ -138,36 +138,6 @@
     </div>
 
 
-    <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
-
-    <!-- <script src="myscripts.js"></script> -->
-
-    <div>
-        <table border="0" align="center" style="width:75%;">
-            <tr>
-                <td>
-                    <div class="container-4">
-                        <div class="iframe-wrapper-4" style="padding:30px;">
-                            <p align=center>→ <a style="color:rgba(60, 60, 82, 0.733);"
-                                    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-                                    target="_blank"><small><b>(
-                                            Shortcut to oUITS Resources )</b></small></a> ←</p>
-                            <!-- <div class="iframe-controls-4">
-              <button class="button-4" onclick="zoomIn()">Zoom In</button>
-              <button class="button-4" onclick="zoomOut()">Zoom Out</button>
-              <button class="button-4" onclick="resetZoom()">Reset</button>
-            </div> -->
-                            <iframe class="iframe-4"
-                                src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-                                allowfullscreen
-                                sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
-                            </iframe>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </div>
 
 
 
