--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -23,9 +23,9 @@
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
         <small>Coding<br>Blogs</small>
     </a>
-    <a class="active-1" href="../CSE-Files.html">
-        <small>CSE<br>Files</small>
-    </a>
+    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+        <small>UITS<br>G-Drive</small>
+      </a>
 </div>
 
 
