--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
       <small>Coding<br>Blogs</small>
     </a>
-    <a class="active-1" href="page-depth-01/CSE-Files.html">
-      <small>CSE<br>Files</small>
+    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+      <small>Drive<br>Link</small>
     </a>
   </div>
 
@@ -83,36 +83,33 @@
     </table>
   </div>
 
-  <!-- BLOGGER IFRAME -->
+ <!-- BLOGGER IFRAME -->
 
+ <table border="10" align=center style="width:90%; max-width: 860px;">
+  <tr>
+    <th>
 
-  <table border="10" align=center style="width:90%; max-width: 860px;">
-    <tr>
-      <th>
+      <!-- "topnav3" -->
 
-        <!-- "topnav3" -->
+      <div class="topnav-3">
+        <h2>
+          <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
+        </h2>
+      </div>
 
-        <div class="topnav-3">
-          <h2>
-            <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
-          </h2>
+      <!-- "top-bar2" -->
+
+      <div class="top-bar-2">
+        <div class="iframe-container-2">
+          <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
         </div>
+      </div>
 
-        <!-- "top-bar2" -->
-
-        <div class="top-bar-2">
-          <div class="iframe-container-2">
-            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
-          </div>
-        </div>
-
-
-        <div class="overlay-2"></div>
-        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
-      </th>
-    </tr>
-  </table>
-
+      <div class="overlay-2"></div>
+      <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
+    </th>
+  </tr>
+</table>
 
   <br>
   <br>
