--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <small>Coding<br>Blogs</small>
     </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-      <small>Drive<br>Link</small>
+      <small>UITS<br>G-Drive</small>
     </a>
   </div>
 
