--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -54,7 +54,7 @@
     </div> -->
     <div align=center>
         <p align="center" style="width: 60%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
-                    batch</b><br><br>Take Note that Files maybe
+                    batch</b><br><br>Take Note that Files may be
                 outdated or
                 not organized to the latest course list. In that case, please email me
                 at <b>b1tranger.01@gmail.com</b> and let me know of the specific shortcomings of this page.
