--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -27,7 +27,7 @@
         }
 
         table {
-            width: 100%;
+            width: 80%;
             border-collapse: collapse;
             margin: 0;
             padding: 0;
@@ -163,7 +163,7 @@
         <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small>
         </p>
 
-        <div class="university-resources" style="width:70%;">
+        <div class="university-resources" style="width:80%;">
             <font size="5">
                 <p align="center">Similar Projects ! !</p>
             </font>
@@ -184,8 +184,10 @@
 
         <br>
 
-        <div class="university-resources" style="width:70%;">
-            <h2 class="table-title">University Resources Directory</h2>
+        <div class="university-resources" align="center">
+            <font size="5">
+                <p align="center">University Resources Directory</p>
+            </font>
             <p align="center" style="color:rgba(0, 0, 0, 0.393);">(Other Universities doing skibidi)</p>
             <div class="table-container">
                 <table>
