--- a/page-depth-01/page-depth-02/S06.html
+++ b/page-depth-01/page-depth-02/S06.html
@@ -11,22 +11,22 @@
 
 <body>
 
-  <!-- TOP BAR -->
+<!-- TOP BAR -->
 
- <div class="topnav-1">
+<div class="topnav-1">
 
-    <a class="active-1" href="../Tutorials.html">
-        <small>Resources<br>Tutorials</small>
-    </a>
-    <a class="active-1" href="../References.html">
-        <small>References<br>(updates)</small>
-    </a>
-    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-        <small>Coding<br>Blogs</small>
-    </a>
-    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-      <small>UITS<br>G-Drive</small>
-    </a>
+  <a class="active-1" href="page-depth-01/Tutorials.html">
+    <small>Tutorials</small>
+  </a>
+  <a class="active-1" href="page-depth-01/References.html">
+    <small>References</small>
+  </a>
+  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+    <small>Blogs</small>
+  </a>
+  <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+    <small>UITS<br>G-Drive</small>
+  </a>
 </div>
 
 
