--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </a>
         </td>
         <td>
-          <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">
-            Routine Format
+          <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link" target="_blank">
+            Contests Archive
           </a>
         </td>
         <td>
