--- a/abstraction/archive.html
+++ b/abstraction/archive.html
@@ -44,6 +44,65 @@
 
 <hr><!----------------------------------------------------------------- -->
 
+<!-- 
+************************************************
+************************************************
+*******COMMON CODES FOR ALL PAGES??*************
+************************************************
+************************************************ 
+-->
+
+
+<!-- TOP BAR -->
+
+<div class="topnav-1">
+
+  <a class="active-1" href="page-depth-01/Tutorials.html">
+    <small>Tutorials</small>
+  </a>
+  <a class="active-1" href="page-depth-01/References.html">
+    <small>References</small>
+  </a>
+  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+    <small>Blogs</small>
+  </a>
+  <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+    <small>UITS<br>G-Drive</small>
+  </a>
+</div>
+
+
+  <!-- BOTTOM BAR "navbar" -->
+
+  <div style="padding-left:16px">
+  </div>
+  <div class="navbar-5">
+    <font size="24"></font>
+    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+    </font>
+
+  </div>
+
+    <!-- HOME BUTTON -->
+
+    <a href="../index.html" class="home-button">
+      <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+      </svg>
+  </a>
+
+  <!-- BACK BUTTON -->
+
+  <a href="javascript:history.back()" class="back-icon">&#8592;</a>
+
+
+
+
+
+
+<hr><!----------------------------------------------------------------- -->
+
     <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
 
     <!-- <script src="myscripts.js"></script> -->
